tomcat: Add parameters on startup to allow introspection.